Just throw everything in there!